# prefect_demo

./: README.md  main.py  pdf_information_extraction.py  pdf_information_extraction_prefect.py  prefect.yaml  prefect_demo_script.py  pyproject.toml
